FINAL Co-authored-by: edurossob <edurossob@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "*.vhd": "vhdl",
     "float.h": "c",
     "assert.h": "c",
-    "matheval.h": "c"
+    "matheval.h": "c",
+    "functions.h": "c"
   }
 }
